--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,13 +6,15 @@
 
 @theme {
   /* breakpoint */
-  --breakpoint-Xxl: 1440px; /*1440 px*/
+  --breakpoint-Xxl: 1440px;
+  /*1440 px*/
   --breakpoint-2xl: 1536px;
   --breakpoint-xsm: 500px;
 
   /* color */
   --color-primary: #E50914;
   --color-secondary: #1F2A2E;
+  --color-secondary-text: #ffffff;
   --color-lightgray: #F4F8FA;
   --color-overlay: #000A0B99;
   --color-darkblack: #273338;
@@ -20,7 +22,8 @@
   --color-gray: #365564;
 
   /* padding */
-  --spacing-35: 35rem; /*550px*/
+  --spacing-35: 35rem;
+  /*550px*/
 
   /* text */
   --text-28: 28px;
@@ -51,7 +54,7 @@ body {
     @apply text-6xl md:text-9xl 2xl:text-[290px] leading-none;
   }
 
-  .blog-heading{
+  .blog-heading {
     @apply text-4xl md:text-5xl xl:text-7xl;
   }
 
@@ -59,23 +62,23 @@ body {
     @apply text-base font-medium text-white bg-secondary dark:bg-white/10;
   }
 
-  .project-descp p{
-    @apply text-secondary/70 dark:text-white/70 pt-2;
+  .project-descp p {
+    @apply text-secondary-text/70 dark:text-white/70 pt-2;
   }
 
-  .project-descp h4{
-    @apply  pt-5;
+  .project-descp h4 {
+    @apply pt-5;
   }
 
-  .project-descp h5{
-    @apply  pt-4;
+  .project-descp h5 {
+    @apply pt-4;
   }
 
-  .blog-content p{
-    @apply text-secondary/70 dark:text-white/70;
+  .blog-content p {
+    @apply text-secondary-text/70 dark:text-white/70;
   }
 
-  .blog-content h4{
+  .blog-content h4 {
     @apply mt-5 mb-3.5;
   }
 
@@ -102,15 +105,15 @@ body {
   }
 
   h2 {
-    @apply text-4xl md:text-5xl Xxl:text-[56px] font-bold leading-tight text-secondary dark:text-white;
+    @apply text-4xl md:text-5xl Xxl:text-[56px] font-bold leading-tight text-secondary-text dark:text-white;
   }
 
   h3 {
-    @apply text-28 Xxl:text-4xl font-bold text-secondary dark:text-white;
+    @apply text-28 Xxl:text-4xl font-bold text-secondary-text dark:text-white;
   }
 
   h4 {
-    @apply text-xl md:text-2xl lg:text-28 font-bold text-secondary dark:text-white;
+    @apply text-xl md:text-2xl lg:text-28 font-bold text-secondary-text dark:text-white;
   }
 
   h5 {
